fixtures/invalid/owned-path-overlap/src/shared/public.ts
export const wideValue = 1;
